objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Total_Monthly_Contributions__c</fullName>
        <formula>No_of_Producers__c * Monthly_Contribution__c * Monthly_Memberships__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Contributions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Prospects__c</fullName>
        <formula>Full_Time_Employees__c + Part_Time_Employees__c + Seasonal_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prospects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Link_Sent_Date__c</fullName>
        <label>Training Link Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Training_Link_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Link Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP Sales</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>VP of Sales</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>W_9_Received_Date__c</fullName>
        <label>W-9 Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>W_9_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-9 Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Welcome_Call__c</fullName>
        <label>Welcome Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1099_IC__c</fullName>
        <label>1099 IC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vfirst_Email_address__c</fullName>
        <label>vfirst Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vfirst_First_Name__c</fullName>
        <label>vfirst First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst_Last_Name__c</fullName>
        <label>vfirst Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__Adjudication__c</fullName>
        <formula>IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c, &quot;Approved&quot;), 
IMAGE(&quot;https://salesforce.verifiedfirst.com/images/Approved.png&quot;, &quot;Approved&quot;, 14, 14),&apos;&apos;) 
+ 
IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c, &quot;Pending&quot;), 
IMAGE(&quot;https://salesforce.verifiedfirst.com/images/Pending.png&quot;, &quot;Pending&quot;, 14, 14),&apos;&apos;) 
+ 
IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c, &quot;Declined&quot;), 
IMAGE(&quot;https://salesforce.verifiedfirst.com/images/Declined.png&quot;, &quot;Declined&quot;, 14, 14),&apos;&apos;) 
+ 
IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c = &quot;-&quot;, 
&apos;To Be Determined&apos;, &apos; &apos; + vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjudication</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__Site_Guest_Access_Helper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verified First Site Guest Access Helper</label>
        <referenceTo>vfirst__Site_Guest_Access_Helper__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vfirst__Stage__c</fullName>
        <formula>IF(vfirst__Site_Guest_Access_Helper__r.vfirst__File_Processing__c,
  &apos;File Processing...&apos;,
  IF(OR(OR(OR(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:email&apos;, vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;ready_to_order&apos;), vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:app_pending&apos;), CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;pre_pull&apos;)), CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;waiting_applicant&apos;)), 
    IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Archived__c, 
      IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Archived_By__c == &apos;Applicant&apos;, 
        &apos;Refused Invitation&apos;, 
        &apos;Withdrawn&apos; 
      ), 
      IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;pre_pull&apos;), 
        &apos;Partially Ordered&apos;, 
        IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;ready_to_order&apos;,
          &apos;Ready to Order&apos;,
          IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Invite_Send_Error__c,
            &apos;Notification Email Bounced&apos;, 
            &apos;Waiting on Applicant&apos; 
          ) 
        ) 
      ) 
    ), 
    IF(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:pending&apos;, CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;partial&apos;)), 
      &apos;Partially Complete&apos;, 
      IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;applicant_declined&apos;, 
        &apos;Applicant Declined&apos;, 
        IF(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:ready&apos;, vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete&apos;), 
          &apos;Complete&apos;, 
          IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;canceled&apos;, 
            &apos;Canceled&apos;, 
            IF(OR(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:email&apos;, vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;waiting_applicant-invitation_email&apos;), vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;waiting_applicant-invitation_sms&apos;), 
              &apos;Invitation Sent&apos;, 
              IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-need_review&apos;, 
                &apos;Complete - In Need of Review&apos;, 
                IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-approved&apos;, 
                  &apos;Complete - Approved&apos;, 
                  IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-preadverse&apos;, 
                    &apos;Complete - Pre-Adverse Action&apos;, 
                    IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-adverse&apos;, 
                      &apos;Complete - Adverse Action&apos;, 
                      IF(ISBLANK(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c), 
                        &apos;&apos;, 
                        &apos;File Processing...&apos; 
                      ) 
                    ) 
                  ) 
                ) 
              ) 
            ) 
          ) 
        ) 
      ) 
    ) 
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__Verification_Report__c</fullName>
        <formula>IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:ready&apos;, 

	IF( CONTAINS($Api.Partner_Server_URL_300, &apos;.my.&apos;),
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://vfirst.&apos;, &apos;https://&apos;), &apos;.visual.&apos;, &apos;.sales&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Bactive.png&apos;, &apos;Ready &apos;,16,16))
	,
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://&apos;, &apos;https://vfirst.&apos;), &apos;.sales&apos;, &apos;.visual.&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Bactive.png&apos;, &apos;Ready &apos;,16,16))
	)
,
	IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:partial&apos;,

	IF( CONTAINS($Api.Partner_Server_URL_300, &apos;.my.&apos;),
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://vfirst.&apos;, &apos;https://&apos;), &apos;.visual.&apos;, &apos;.sales&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Byellow.png&apos;, &apos;Partially &apos;,16,16))
	,
	HYPERLINK(SUBSTITUTE ( SUBSTITUTE ( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)), &apos;https://&apos;, &apos;https://vfirst.&apos;), &apos;.sales&apos;, &apos;.visual.&apos;) + &apos;apex/vfirst__PdfTemplate?objectId=&apos; + Id, IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Byellow.png&apos;, &apos;Partially &apos;,16,16))
	) 
	,
	IMAGE(&apos;https://salesforce.verifiedfirst.com/images/report%2Binactive.png&apos;, &apos;Not Ready &apos;,16,16))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verification Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__of_Background_Checks_Ordered__c</fullName>
        <formula>vfirst__Site_Guest_Access_Helper__r.vfirst__of_Background_Checks_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Background Checks Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Background_Check_Date__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Client_Management</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>notEqual</operation>
            <value>Carrlos Boyd</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Kick-off Meeting,Data Transfer,Enrollment,Marketing,Training</value>
        </filters>
        <label>Client Management</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Compliance_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Background_Check_Sent_Date__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Compliance</value>
        </filters>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>notEqual</operation>
            <value>Carrlos Boyd</value>
        </filters>
        <label>Compliance</label>
    </listViews>
    <listViews>
        <fullName>Contracting</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Application_Link_Sent__c</columns>
        <columns>E_O_Link_Sent__c</columns>
        <columns>E_O__c</columns>
        <columns>Training_Link_Sent__c</columns>
        <columns>Test_Passed__c</columns>
        <columns>Deck_Page_Received__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Contracting</value>
        </filters>
        <label>Contracting Stage</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Team_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>My Team Opportunities</label>
        <sharedTo>
            <role>Chief_Sales_Officer</role>
            <role>Regional_Sales_Director</role>
            <role>VP_of_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Opportunities_in_Application</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Application_Link_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Application</value>
        </filters>
        <label>Application Stage</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Call_Center_FMO</fullName>
        <active>true</active>
        <businessProcess>Call Center%2FFMO</businessProcess>
        <label>Call Center/FMO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Producer</fullName>
        <active>true</active>
        <businessProcess>Individual Producer</businessProcess>
        <label>Individual Producer</label>
    </recordTypes>
    <recordTypes>
        <fullName>List_Bill</fullName>
        <active>true</active>
        <businessProcess>List Bill</businessProcess>
        <label>List Bill</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>AcctOpp_Lock_field_must_be_checked</fullName>
        <active>true</active>
        <description>Hidden field that prevents users from arbitrarily creating opportunities. AccOpp Lock field is populated during lead conversion.</description>
        <errorConditionFormula>AND
(
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
 AcctOpp_Lock__c = FALSE
)</errorConditionFormula>
        <errorMessage>You cannot create a new opportunity without going through the lead conversion process. Please create a lead and then convert it to an opportunity and account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Active_and_ID_in_Admin123</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
				$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
				ISPICKVAL(StageName, &quot;Closed Won&quot;),
				TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;,

				OR
				(
								Active_in_Admin123__c = FALSE,
								Salesforce_ID_in_Admin123__c = FALSE 
				)
)</errorConditionFormula>
        <errorMessage>You must check the &apos;Active in Admin123&apos; and &apos;Salesforce ID in Admin123&apos; boxes to confirm these have been done before closing the opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Affinity_Level_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$RecordType.Name = &quot;Individual Producer&quot;,
ISPICKVAL(Contract_Type__c, &quot;Affinity&quot;),
NOT(ISPICKVAL(Approval_Status__c, &quot;Approved&quot;)),

OR
(
ISPICKVAL(Contract_Level__c , &quot;3&quot;),
ISPICKVAL(Contract_Level__c , &quot;4&quot;),
ISPICKVAL(Contract_Level__c , &quot;5&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Contract_Level__c</errorDisplayField>
        <errorMessage>Leads with contract type &apos;Affinity&apos; and contract level greater than 3 should be Submitted for Approval. Please contact your Sales Coordinator or Sales VP for further instructions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agent_ID_Needed_To_Convert</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
	ISBLANK(Agent_ID__c),
	IsWon = TRUE
	)</errorConditionFormula>
        <errorDisplayField>Agent_ID__c</errorDisplayField>
        <errorMessage>Please Enter the Agent ID before converting the Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>All_Contracting_fields_should_be_checked</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
				OR
				(
								Training_Link_Sent__c = FALSE,
								Test_Passed__c = FALSE,
								E_O_Link_Sent__c = FALSE,
								ISBLANK(TEXT(E_O__c))
				),
				ISPICKVAL(StageName, &quot;Closed Won&quot;),
				$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
				TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;

)</errorConditionFormula>
        <errorMessage>All fields in the Contracting section need to be completed before opportunity can be won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Application_Link_in_application_stage</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
Application_Link_Sent__c = FALSE ,
ISPICKVAL(StageName, &quot;Contracting&quot;),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$RecordType.Name = &quot;Individual Producer&quot;,
TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;
)</errorConditionFormula>
        <errorDisplayField>Application_Link_Sent__c</errorDisplayField>
        <errorMessage>Please check the Application link checkbox before opportunity can be moved to Contracting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Application_Receive_in_application_stage</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
Application_Received__c = FALSE,
ISPICKVAL(StageName, &quot;Contracting&quot;),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$RecordType.Name = &quot;Individual Producer&quot;,
TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;
)</errorConditionFormula>
        <errorDisplayField>Application_Received__c</errorDisplayField>
        <errorMessage>Please check the Application Received checkbox before opportunity can be moved to Contracting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Background_check_completed_in_Compliance</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
ISPICKVAL(StageName, &quot;Application&quot;),
Background_Check__c = FALSE,
$RecordType.Name = &quot;Individual Producer&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;
)</errorConditionFormula>
        <errorDisplayField>Background_Check__c</errorDisplayField>
        <errorMessage>Background Check must be completed before the opportunity can move to the Application stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Commission_fields_req_in_Qualification</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
				OR
				(
								ISBLANK(TEXT(Affinity_percent__c)),
								ISBLANK(TEXT(Call_Center_percent__c)),
								ISBLANK(TEXT(FMO_percent__c)),
								ISBLANK(TEXT(MGP_percent__c)),
								ISBLANK(TEXT(MGP2_percent__c)),
								ISBLANK(TEXT(Producer_percent__c)),
								ISBLANK(TEXT(Producer2_percent__c)),
								ISBLANK(TEXT(Referral_percent__c)),
								ISBLANK(Affinity__c),
								ISBLANK(Call_Center__c),
								ISBLANK(FMO__c),
								ISBLANK(MGP__c),
								ISBLANK(MGP2__c),
								ISBLANK(Producer__c),
								ISBLANK(Producer2__c),
								ISBLANK(Referral__c)
				),
				$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
				NOW() &gt; CreatedDate + 0.0014,
				TEXT(StageName)  &lt;&gt; &quot;Qualification&quot;,
				TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;

)</errorConditionFormula>
        <errorMessage>You must complete the Referral, Producer, MGP, Call Center, and Affinity percentage (%) fields while the opportunity is in the Qualification stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Compliance_fields_must_be_completed</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
				$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
				TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;,
				$RecordType.Name = &quot;Call Center/FMO&quot;,
				ISPICKVAL(PRIORVALUE(StageName),&quot;Compliance&quot;),
				AND
				(
								TEXT(StageName) &lt;&gt; &quot;Compliance&quot;,
								TEXT(StageName) &lt;&gt; &quot;Verbal Yes&quot;,
								TEXT(StageName) &lt;&gt; &quot;Qualification&quot;
				),
				OR
				(
								Application_Approved__c = FALSE,
								ISBLANK(TEXT(PMO_Required__c))
				)
)</errorConditionFormula>
        <errorMessage>The Application Approved and PMO Required fields must be completed before completing the Compliance stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Level_19_needs_approval</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$RecordType.Name = &quot;Individual Producer&quot;,
ISPICKVAL(Contract_Type__c, &quot;Producer&quot;),

OR
(
ISPICKVAL(Contract_Level__c , &quot;19%&quot;),
ISPICKVAL(Contract_Level__c , &quot;20%&quot;),
ISPICKVAL(Contract_Level__c , &quot;21%&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Contract_Level__c</errorDisplayField>
        <errorMessage>Individual Producers with a contract level greater than 19 needs approval during lead stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Level_req_during_Qualification</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
				ISBLANK(TEXT(Contract_Level__c)),
				NOW() &gt; CreatedDate + 0.0014,
				TEXT(StageName) &lt;&gt; &quot;Qualification&quot;,
				$RecordType.Name = &quot;Individual Producer&quot;,
				$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
				TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;
)</errorConditionFormula>
        <errorDisplayField>Contract_Level__c</errorDisplayField>
        <errorMessage>You must complete the Contract Level field while the opportunity is in the Qualification stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Type_req_during_Qualification</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
				ISBLANK(TEXT(Contract_Type__c)),
				NOW() &gt; CreatedDate + 0.0014,
				TEXT(StageName) &lt;&gt; &quot;Qualification&quot;,
				$RecordType.Name = &quot;Individual Producer&quot;,
				$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
				TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;

)</errorConditionFormula>
        <errorDisplayField>Contract_Type__c</errorDisplayField>
        <errorMessage>You must complete the Contract Type field while the opportunity is in the Qualification stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOB_required_at_Verbal_Yes</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
				ISBLANK(Date_of_Birth__c),
				ISPICKVAL(StageName, &quot;Compliance&quot;),
				OR
				(
								ISPICKVAL(Contract_Type__c, &quot;Producer&quot;),
								ISPICKVAL(Contract_Type__c, &quot;MGP&quot;)
				),
				$RecordType.Name = &quot;Individual Producer&quot;,
				$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
				TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;

)</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Date of Birth is required before Opportunity stage can be changed to Compliance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_4_SSN_must_be_a_number</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 NOT(ISBLANK(Last_4_SSN__c)),
 OR 
  (
   NOT(ISNUMBER(Last_4_SSN__c)), 
   LEN(Last_4_SSN__c) &lt;&gt; 4
  )
)</errorConditionFormula>
        <errorDisplayField>Last_4_SSN__c</errorDisplayField>
        <errorMessage>Last 4 SSN must be a four digit number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_on_commission_percentages</fullName>
        <active>false</active>
        <errorConditionFormula>OR
(
 AND
 (
  Affinity_percentage__c &lt;&gt; 0.00,
  Affinity_percentage__c &lt;&gt; 0.0025
 ), 
 AND
 (
  Call_Center_percentage__c &lt;&gt; 0.00,
  OR
  (
  Call_Center_percentage__c &lt; 0.25,
  Call_Center_percentage__c &gt; 0.32
  )
 ),
 AND
 (
  FMO_percentage__c &lt;&gt; 0.00,
  OR
  (
  FMO_percentage__c &lt; 0.04,
  FMO_percentage__c &gt; 0.06
  ),
  OR
  (
  FMO_percentage__c &lt; 0.19,
  FMO_percentage__c &gt; 0.22
  )
 ),
 AND
 (
  MGP_percentage__c &lt;&gt; 0.00,
  OR
  (
  MGP_percentage__c &lt; 0.02,
  MGP_percentage__c &gt; 0.05
  )
 ),
 AND
 (
  Producer_percentage__c &lt;&gt; 0.00,
  OR
  (
  Producer_percentage__c &lt; 0.16,
  Producer_percentage__c &gt; 0.18
  )
 ),
 AND
 (
  Referral_percentage__c &lt;&gt; 0.00,
  Referral_percentage__c &lt;&gt; 0.01
 )
)</errorConditionFormula>
        <errorMessage>Values for commissions fields must be &quot;0%&quot; or the following: Affinity 0.25%, Call Center 25-32%, FMO 20-22%, MGP 2-5%, Producer 16-19%, or Referral 1%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>List_Bill_producer_must_be_certified</fullName>
        <active>true</active>
        <description>List Bill producer must be certified</description>
        <errorConditionFormula>AND
(
 List_Bill_Producer__r.List_Bill_Certified__c = FALSE,
 List_Bill__c = TRUE
)</errorConditionFormula>
        <errorMessage>List Bill producer must be certified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_closed_opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 NOT(ISCHANGED(StageName)),
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
 OR
 (
  ISPICKVAL(StageName, &quot;Closed Won&quot;),
  ISPICKVAL(StageName, &quot;Closed Lost&quot;)
 )
)</errorConditionFormula>
        <errorMessage>You cannot edit an opportunity that has been closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lost_Reason_when_Opportunity_is_lost</fullName>
        <active>true</active>
        <description>Lost Reason is required for lost opportunity.</description>
        <errorConditionFormula>AND
 (
  ISBLANK(TEXT(Lost_Reason__c)),
  ISPICKVAL(StageName, &quot;Closed Lost&quot;),
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
        <errorDisplayField>Lost_Reason__c</errorDisplayField>
        <errorMessage>A Lost Reason is required when an opportunity is lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MGP_and_MGP2_cannot_exceed_5</fullName>
        <active>true</active>
        <errorConditionFormula>(IF(ISNUMBER(Text(MGP_percent__c)),VALUE(Text(MGP_percent__c)),0)) + (IF(ISNUMBER(Text(MGP2_percent__c)),VALUE(Text(MGP2_percent__c)),0)) &gt; 5</errorConditionFormula>
        <errorMessage>MGP% and MGP2% cannot exceed 5%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Management_level_only_for_Sales_Execs</fullName>
        <active>true</active>
        <description>Management_level_only_for_Sales_Execs</description>
        <errorConditionFormula>AND(
ISPICKVAL(Contract_Type__c, &quot;Management&quot;),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Sales Executive&quot;,
ISCHANGED(Contract_Type__c)
)</errorConditionFormula>
        <errorDisplayField>Contract_Type__c</errorDisplayField>
        <errorMessage>Only Sales Executives can Save an Opportunity with the Management Contract Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_of_Prod_required_during_Qualification</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 No_of_Producers__c &lt; 1,
 NOW() &gt; CreatedDate + 0.0014,
 TEXT(StageName) &lt;&gt; &quot;Qualification&quot;,
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
 TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;
)</errorConditionFormula>
        <errorDisplayField>No_of_Producers__c</errorDisplayField>
        <errorMessage>You must complete the No. of Producers field with a value of at least 1.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_Acct_required_in_Qualification</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
				$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
				ISBLANK(Parent_Account__c),
				TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;,
				NOT(ISPICKVAL(StageName, &quot;Qualification&quot;))
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Opportunity must have a Parent Account to move</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Producer_and_Producer2_cannot_exceed_18</fullName>
        <active>true</active>
        <errorConditionFormula>(IF(ISNUMBER(Text(Producer_percent__c)),VALUE(Text(Producer_percent__c)),0)) + (IF(ISNUMBER(Text(Producer2_percent__c)),VALUE(Text(Producer2_percent__c)),0)) &gt; 18</errorConditionFormula>
        <errorMessage>Producer% and Producer2% cannot exceed 18%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Proj_Close_required_during_Qualification</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
				ISBLANK(Projected_Close_Date__c),
				NOW() &gt; CreatedDate + 0.0014,
				TEXT(StageName) &lt;&gt; &quot;Qualification&quot;,
				TEXT(StageName) &lt;&gt; &quot;Closed Lost&quot;,
				$RecordType.Name = &quot;Individual Producer&quot;,
				$Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
        <errorDisplayField>Projected_Close_Date__c</errorDisplayField>
        <errorMessage>You must complete the Projected Close Date field while the opportunity is in the Qualification stage.</errorMessage>
    </validationRules>
</CustomObject>